--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  /* margin-bottom: 60px; */
+  margin-bottom: 60px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
